<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_onboarding">Phincon</string>
    <string name="secondtitle_onboarding">TV</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="tv_email">Email</string>
    <string name="tv_password">Password</string>
    <string name="tv_signup_question">Don\'t have an account?</string>
    <string name="tv_signup">Sign Up</string>
    <string name="tv_login_question">Already have an account?</string>
    <string name="tv_login">Sign in</string>
    <string name="tv_tnc"><![CDATA[By registering with PhinconTV, you agree to PhinconTV\'s Terms of Service and Privacy Policy]]></string>
    <string name="username">Username</string>
    <string name="btn_username">Done</string>
    <string name="tv_username_desc">Help people discover your account by using the name you\'re known by.</string>
    <string name="tv_username">Enter Username</string>
    <string name="title_dashboard"><font fgcolor='#5c73ae'>Phincon</font><font>TV</font></string>
    <string name="subtitle_dashboard">Hi, %name%!</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_user">User</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_transaction">Transaction</string>
    <string name="tv_coming_soon">Coming Soon</string>
    <string name="tv_popular">Popular</string>
    <string name="title_movie">Eternal Spiderman Nowat Home lalallala</string>
    <string name="year_and_genre_movie">%year% . %genre%</string>
    <string name="token_movie">500</string>
    <string name="search">Search</string>
    <string name="hint_search">Search</string>
    <string name="tv_rating">%rating% (%total_rating%)</string>
    <string name="tv_thumbnail_onboarding">Watch million movies with your loved ones!</string>
    <string name="tv_subtitle_thumbnail">Pick hundreds of free movie for a fun quality time.</string>
    <string name="tv_thumbnail_onboarding_3">Watch anytime and anywhere!</string>
    <string name="tv_subtitle_thumbnail_3">Watch exclusive trending movies around the world</string>
    <string name="tv_thumbnail_onboarding_2">Enjoy movies with affordable movie token!</string>
    <string name="tv_subtitle_thumbnail_2">Watch exclusive content at an affordable price</string>
    <string name="helperText_email">Email is required</string>
    <string name="helperText_password">Minimum of 8 character</string>
    <string name="title_appbarSetting">User</string>
    <string name="tv_card_title">Settings</string>
    <string name="tv_card_token">Token</string>
    <string name="on">ON</string>
    <string name="tv_card_dark_mode">Dark Mode</string>
    <string name="tv_card_lang">Language</string>
    <string name="en">ENG</string>
    <string name="tv_card_logout">Logout</string>
    <string name="helperText_email_error">Email is Invalid</string>
    <string name="helperText_password_error">Password is Invalid</string>
    <string name="helperText_name_error">Username is required</string>
    <string name="desc">Desperate to keep custody of his daughter, a mixed martial arts fighter abandons a big match and races across Berlin to attend her birthday party</string>
    <string name="tv_favorite">Add To Favorite</string>
    <string name="no_text">No Text</string>
    <string name="tv_cart">Add to Cart</string>
    <string name="rating">Rating</string>
    <string name="actor">Actor</string>
    <string name="tv_delete">Delete</string>
    <string name="tv_select_all">Select All</string>
    <string name="total_bayar">Total Cost</string>
    <string name="harga_detail">Rp.0</string>
    <string name="buy">Buy</string>
    <string name="tv_count_wishlist">%angka% Wishlists</string>
    <string name="tv_addcart">Add to Cart</string>
    <string name="tv_snackbar_wishlist">Movie has been added to wishlist</string>
    <string name="tv_snackbar_wishlist_delete">Movie has been deleted from wishlist</string>
    <string name="tv_snackbar_cart_add">Movie has been added to cart</string>
    <string name="tv_snackbar_cart_delete">Movie has been deleted to cart</string>
    <string name="tv_delete_wishlist">Do you want to remove this movie?</string>
    <string name="tv_no">No</string>
    <string name="tv_yes">Yes</string>
    <string name="tv_topup">Top Up</string>
    <string name="year">%year%</string>
    <string name="tv_choose_amount">Choose Amount</string>
    <string name="tv_your_token">Your Token</string>
    <string name="hint_enter_amount">Enter Amount</string>
    <string name="helper_token">Buy in Rupiah</string>
    <string name="tv_payment">Payment</string>
    <string name="tv_choose_payment">Choose Payment</string>
    <string name="tv_virtual_account">Virtual Account</string>
    <string name="tv_bca_virtual_account">BCA Virtual Account</string>
    <string name="tv_added_token">token has been added to your account</string>
    <string name="tv_buy_now">Buy Now</string>
    <string name="tv_checkout_items">Purchased Items</string>
    <string name="tv_enough_balance">You don\'t have enough balance.</string>
    <string name="tv_please_top_up">Top-Up</string>
    <string name="tv_zero">0</string>
    <string name="tv_checkout">Checkout</string>
    <string name="tv_status">Status</string>
    <string name="tv_payment_is_successful">Payment is Successful</string>
    <string name="tv_transaction_detail">Transaction Detail</string>
    <string name="tv_transaction_id">Transaction ID</string>
    <string name="tv_movie_title">Movie Title</string>
    <string name="tv_total_payment">Total Payment</string>
    <string name="register_validation">Please Fill in your Email and Password</string>
    <string name="other_email">Invalid password or use other email</string>
    <string name="other_email_signup">This email has been registered</string>
    <string name="tv_transaction_date">Transaction Date</string>
    <string name="tv_token_transaction_value">%token% Token</string>
    <string name="tv_shopping">Shopping</string>
    <string name="tv_purchased">Purchased</string>

    <!-- Genres -->
    <string name="genre_action">Action</string>
    <string name="genre_adventure">Adventure</string>
    <string name="genre_animation">Animation</string>
    <string name="genre_comedy">Comedy</string>
    <string name="genre_crime">Crime</string>
    <string name="genre_documentary">Documentary</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Family</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_history">History</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_music">Music</string>
    <string name="genre_mystery">Mystery</string>
    <string name="genre_romance">Romance</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_tv_movie">TV Movie</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">War</string>
    <string name="genre_western">Western</string>

    <!-- Default genre for unknown genreId -->
    <string name="unknown_genre">Unknown Genre</string>
</resources>