<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dashboard.cart.CartFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_back_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#003366"
        android:contentDescription="@string/no_text"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/ic_arrow_white" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/deep_blue"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/divider_cart_appBar"
        app:layout_constraintStart_toEndOf="@id/cv_back_cart"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/menu_cart" />

    <View
        android:id="@+id/divider_cart_appBar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:backgroundTint="@color/sky_blue"
        app:layout_constraintTop_toBottomOf="@+id/cv_back_cart" />

    <CheckBox
        android:id="@+id/checkbox_cart_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginStart="4dp"
        android:checked="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_cart_appBar" />

    <TextView
        android:id="@+id/tv_cart_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/deep_blue"
        app:layout_constraintStart_toEndOf="@+id/checkbox_cart_all"
        app:layout_constraintTop_toBottomOf="@+id/divider_cart_appBar"
        tools:text="@string/tv_select_all" />

    <TextView
        android:id="@+id/tv_cart_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="18dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/deep_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_cart_appBar"
        tools:text="@string/tv_delete" />

    <View
        android:id="@+id/dividerBottom_cart_allItems"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:backgroundTint="@color/sky_blue"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_cart_all" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_buy"
        app:layout_constraintTop_toBottomOf="@+id/dividerBottom_cart_allItems"
        tools:listitem="@layout/item_cart" />

    <View
        android:id="@+id/dividerBottom_cart_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:backgroundTint="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/rv_cart" />

    <Button
        android:id="@+id/btn_buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:backgroundTint="@color/deep_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_cart"
        tools:text="@string/buy" />

    <TextView
        android:id="@+id/tv_cart_totalprice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@color/deep_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_buy"
        tools:text="@string/total_bayar" />

    <TextView
        android:id="@+id/tv_cart_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/deep_blue"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_buy"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/harga_detail" />


</androidx.constraintlayout.widget.ConstraintLayout>