<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.dashboard.checkout.StatusFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_back_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#003366"
        android:contentDescription="@string/no_text"
        app:cardCornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="2dp"
            android:src="@drawable/ic_arrow_white" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/deep_blue"
        android:textSize="23sp"
        app:layout_constraintBottom_toTopOf="@+id/divider_status_appBar"
        app:layout_constraintStart_toEndOf="@id/cv_back_status"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/tv_status" />

    <View
        android:id="@+id/divider_status_appBar"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#000000"
        android:backgroundTint="@color/sky_blue"
        app:layout_constraintTop_toBottomOf="@+id/cv_back_status" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/img_status"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="48dp"
        android:background="@color/deep_blue"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_status_appBar"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        tools:src="@drawable/ic_check_white" />
    />

    <TextView
        android:id="@+id/tv_payment_is_successful"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/deep_blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_status"
        tools:text="@string/tv_payment_is_successful" />

    <TextView
        android:id="@+id/tv_transaction_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:textColor="@color/deep_blue"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tv_payment_is_successful"
        tools:text="@string/tv_transaction_detail" />

    <TextView
        android:id="@+id/tv_transaction_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="@id/tv_transaction_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_transaction_detail"
        tools:text="@string/tv_transaction_id" />

    <TextView
        android:id="@+id/tv_movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="@id/tv_transaction_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_transaction_id"
        tools:text="@string/tv_movie_title" />

    <TextView
        android:id="@+id/tv_total_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintStart_toStartOf="@id/tv_transaction_detail"
        app:layout_constraintTop_toBottomOf="@id/tv_movie_title"
        tools:text="@string/tv_total_payment" />

    <TextView
        android:id="@+id/tv_transaction_id_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_transaction_id"
        tools:text="@string/tv_transaction_id" />

    <TextView
        android:id="@+id/tv_movie_title_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_movie_title"
        tools:text="@string/tv_movie_title" />

    <TextView
        android:id="@+id/tv_total_payment_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/poppins_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_total_payment"
        tools:text="@string/tv_total_payment" />

</androidx.constraintlayout.widget.ConstraintLayout>